Code refactoring added latest changes from main.